--- a/Homework/HW06/HW06/HW06.vcxproj.filters
+++ b/Homework/HW06/HW06/HW06.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="set.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hw06.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
